--- a/index.html
+++ b/index.html
@@ -2,29 +2,85 @@
 <html>
 <head>
   <title>CS - Timetable</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       font-family: Arial, sans-serif;
       padding: 20px;
     }
+
+    h1, h2 {
+      text-align: center;
+    }
+
     .user-section {
       margin-bottom: 50px;
     }
+
+    .form-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      justify-content: center;
+      margin-bottom: 15px;
+    }
+
+    .form-container label {
+      display: flex;
+      flex-direction: column;
+      min-width: 70px;
+    }
+
+    input, select, button {
+      padding: 6px;
+      font-size: 16px;
+    }
+
+    .table-container {
+      overflow-x: auto;
+    }
+
     table {
       width: 100%;
       border-collapse: collapse;
-      margin-top: 15px;
+      min-width: 600px;
     }
+
     table, th, td {
       border: 1px solid #aaa;
     }
+
     th, td {
       padding: 10px;
       text-align: center;
     }
-    input, select, button {
-      margin: 5px;
-      padding: 6px;
+
+    button {
+      cursor: pointer;
+      background-color: #007BFF;
+      color: white;
+      border: none;
+      border-radius: 4px;
+    }
+
+    button:hover {
+      background-color: #0056b3;
+    }
+
+    @media (max-width: 600px) {
+      input, select, button {
+        width: 100%;
+        box-sizing: border-box;
+      }
+
+      .form-container {
+        flex-direction: column;
+        align-items: stretch;
+      }
+
+      table {
+        font-size: 14px;
+      }
     }
   </style>
 </head>
@@ -35,7 +91,7 @@
   <!-- Person A -->
   <div class="user-section" id="userA">
     <h2>Dr.A.Kutralam - Timetable</h2>
-    <div>
+    <div class="form-container">
       <label>Day:
         <select id="dayA">
           <option value="0">D1</option>
@@ -53,26 +109,28 @@
       <label>5: <input type="text" id="r5A"></label>
       <button onclick="addOrUpdate('A')">Add/Update</button>
     </div>
-    <table id="timetableA">
-      <thead>
-        <tr>
-          <th>Day</th>
-          <th>1</th>
-          <th>2</th>
-          <th>3</th>
-          <th>4</th>
-          <th>5</th>
-          <th>Actions</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
+    <div class="table-container">
+      <table id="timetableA">
+        <thead>
+          <tr>
+            <th>Day</th>
+            <th>1</th>
+            <th>2</th>
+            <th>3</th>
+            <th>4</th>
+            <th>5</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
   </div>
 
   <!-- Person B -->
   <div class="user-section" id="userB">
     <h2>Dr.V.Vani - Timetable</h2>
-    <div>
+    <div class="form-container">
       <label>Day:
         <select id="dayB">
           <option value="0">D1</option>
@@ -90,20 +148,22 @@
       <label>5: <input type="text" id="r5B"></label>
       <button onclick="addOrUpdate('B')">Add/Update</button>
     </div>
-    <table id="timetableB">
-      <thead>
-        <tr>
-          <th>Day</th>
-          <th>1</th>
-          <th>2</th>
-          <th>3</th>
-          <th>4</th>
-          <th>5</th>
-          <th>Actions</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
+    <div class="table-container">
+      <table id="timetableB">
+        <thead>
+          <tr>
+            <th>Day</th>
+            <th>1</th>
+            <th>2</th>
+            <th>3</th>
+            <th>4</th>
+            <th>5</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
   </div>
 
   <script>
@@ -145,7 +205,6 @@
 
       saveToStorage(user);
 
-      // Clear input
       for (let i = 1; i <= 5; i++) {
         document.getElementById("r" + i + user).value = '';
       }
