--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
   <!-- Person A -->
   <div class="user-section" id="userA">
-    <h2>Dr.A.Kutralam - Timetable</h2>
+    <h2>Timetable</h2>
     <div class="form-container">
       <label>Day:
         <select id="dayA">
