--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
         font-size: 14px;
       }
     }
+    footer .copyright {
+  text-align: center;
+  padding-top: 20px;
+  width: 100%;
+  border-top: 1px solid #555;
+}
   </style>
 </head>
 <body>
@@ -126,6 +132,15 @@
       </table>
     </div>
   </div>
+
+
+  <footer>
+  <p class="copyright">
+    &copy; <span id="year"></span> Gandhiraja | All Rights Reserved
+  </p>
+  </footer>
+
+
 
 
   <script>
@@ -215,6 +230,7 @@
     }
 
     initTables();
+    document.getElementById("year").innerHTML = new Date().getFullYear();
   </script>
 
 </body>
