--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>CS - Timetable</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link ="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -159,7 +159,7 @@
             <td><span></span></td>
             <td><span></span></td>
             <td>
-              <button onclick="editRow(this, '${user}')"><i class="material-icons">delete</i></button>
+              <button onclick="editRow(this, '${user}')">Edit</button>
               <button onclick="deleteRow(this, '${user}')">Delete</button>
             </td>
           `;
