--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>CS - Timetable</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
   <style>
     body {
@@ -159,7 +160,10 @@
             <td><span></span></td>
             <td><span></span></td>
             <td>
-              <button onclick="editRow(this, '${user}')">Edit</button>
+              <button onclick="editRow(this, '${user}')">
+  <i class="fas fa-edit"></i>
+</button>
+
               <button onclick="deleteRow(this, '${user}')">Delete</button>
             </td>
           `;
