--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
   <i class="fas fa-edit"></i>
 </button>
 
-              <button onclick="deleteRow(this, '${user}')">Delete</button>
+              <button onclick="deleteRow(this, '${user}')"><i class="fas fa-delete"></i></button>
             </td>
           `;
           tbody.appendChild(row);
