--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
       <table id="timetableA">
         <thead>
           <tr>
-            <th>Day</th>
+            <th style="width:15%">Day</th>
             <th>1</th>
             <th>2</th>
             <th>3</th>
             <th>4</th>
             <th>5</th>
-            <th>Actions</th>
+            <th style="width:15%">Actions</th>
           </tr>
         </thead>
         <tbody></tbody>
